bluec-tests/tests/invalid/types_longdouble/missing_exponent.c
int main(void)
{
    long double foo = 30.eL;
    return 4;
}